example/ingress/ingress-route.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-world-service-one
          servicePort: 8080
        path: /hello-world-one(/|$)(.*)
      - backend:
          serviceName: hello-world-service-two
          servicePort: 8080
        path: /hello-world-two(/|$)(.*)
